<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <com.streen.android.ui.typeface.VarelaRoundRegular
        android:id="@+id/setup_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="25dp"
        android:text="@string/setting_up_hotspot"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:indeterminateTint="@color/colorPrimary"
                android:indeterminateTintMode="src_atop" />

            <LinearLayout
                android:id="@+id/message_title_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/title_message_1_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.streen.android.ui.typeface.VarelaRoundRegular
                        android:id="@+id/title_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/network_name"
                        android:textColor="@color/gray"
                        android:textSize="14sp" />

                    <com.streen.android.ui.typeface.VarelaRoundRegular
                        android:id="@+id/message_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/placeholder"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/title_message_2_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.streen.android.ui.typeface.VarelaRoundRegular
                        android:id="@+id/title_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/network_password"
                        android:textColor="@color/gray"
                        android:textSize="14sp" />

                    <com.streen.android.ui.typeface.VarelaRoundRegular
                        android:id="@+id/message_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/placeholder"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <com.streen.android.ui.typeface.VarelaRoundRegular
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/error"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/switch_1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:padding="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/gray_to_dark_gray_primary_solid"
                    android:text="@string/use_bluetooth"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/switch_2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:padding="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/gray_to_dark_gray_primary_solid"
                    android:text="@string/use_internet"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/switch_3"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:padding="10dp"
                    android:background="@drawable/gray_to_dark_gray_primary_solid"
                    android:text="@string/switch_to_usb"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:background="@color/gray1" />

    <Button
        android:id="@+id/dismiss"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

</LinearLayout>