<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <com.streen.android.ui.typeface.VarelaRoundRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/app_logo_text"
            android:textSize="10sp"
            android:textColor="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <com.streen.android.ui.typeface.VarelaRoundRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textSize="14sp"
                android:textColor="@color/black"/>

            <com.streen.android.ui.typeface.VarelaRoundRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/screen_streamer"
                android:textSize="11sp"
                android:textColor="@color/gray"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:background="@drawable/transparent_to_gray_solid">

            <ImageView
                android:id="@+id/settings"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_action_setting" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/stream_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:background="@drawable/color_primary_to_dark_color_primary_circle_solid">

        <ImageView
            android:id="@+id/stream"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_action_stream" />

    </LinearLayout>

    <com.streen.android.ui.typeface.VarelaRoundRegular
        android:id="@+id/start_streaming_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stream_button"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:text="@string/start_streaming"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>